--- a/pages/index.html
+++ b/pages/index.html
@@ -56,7 +56,7 @@
   <div class="d-grid mt-4"> 
     <input tabindex="9" type="submit" value="Log in" class="loginbtngoBT btn btn-primary email-btn-primary">
     <p>Dont have BT ID ? 
-      <a href="page-2-index.html">
+      <a href="page-2.html">
       Create One
       </a>
     </p>
