--- a/pages/page-2.html
+++ b/pages/page-2.html
@@ -48,12 +48,12 @@
   </label>
   <input type="date" class="form-control" id="DateofBirth1">
 
-  <a  class="back-link" href="page-1-index.html">
+  <a  class="back-link" href="index.html">
      &#60; Back
   </a>
 <div class="d-grid mt-4">
   <button class="loginbtngoBT btn btn-primary email-btn-primary">
-    <a class="next-link" href="page-3-index.html">
+    <a class="next-link" href="page-3.html">
       Next
     </a>
   </button> 
