--- a/pages/page-3.html
+++ b/pages/page-3.html
@@ -48,13 +48,13 @@
   </label>
   <input type="text" class="form-control" id="exampleadress1">
 
-    <a class="back-link" href="page-2-index.html">
+    <a class="back-link" href="page-2.html">
      &#60; Back
     </a>
 
   <div class="d-grid mt-4"> 
   <button class="loginbtngoBT btn btn-primary email-btn-primary" href="page-4-index.html">
-      <a class="next-link" href="page-4-index.html">
+      <a class="next-link" href="page-4.html">
         Next
       </a>
   </button> 
