--- a/pages/page-4.html
+++ b/pages/page-4.html
@@ -52,7 +52,7 @@
     </label>
     <input type="text" class="form-control" id="expiry1" placeholder="MM/YY">
 
-    <a  class="back-link" href="page-3-index.html">
+    <a  class="back-link" href="page-3.html">
        &#60; Back
       </a>
     <div class="d-grid mt-4"> 
