--- a/page-4.html
+++ b/page-4.html
@@ -9,6 +9,7 @@
 <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
 <link rel="icon" href="favicon.ico">
 </head>
@@ -16,13 +17,14 @@
 <body>
 <section class="header">
 <nav class="navbar navbar-expand-lg bg-light"> 
-<div class="container" >
+<div class="container-fluid" >
   <img  src="bt-logo.png" alt="bt-logo">
-  <a class="navbar-brand me-auto ms-2 " href="">Log in</a>
+  <a class="navbar-brand me-auto ms-2 " href="">Credit Card Details</a>
 </div>
 </nav>
 </section>
-  <div class="container"><section class="login-Form">
+  <div class="container-fluid">
+    <section class="login-Form">
     <div class="row">
     <div class="col-lg-3">
     
