--- a/page-3.html
+++ b/page-3.html
@@ -41,15 +41,15 @@
    </h1>
 
  <label for="exampleInputEmail1" class="form-label">
-   Post Code
+  <b>Post Code</b> 
  </label>
  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="" maxlength="6" minlength="6">
- 
+  <br>
  <label for="exampleInputadress1" class="form-label">
-   Adress
+  <b>Adress</b> 
  </label>
  <input type="text" class="form-control" id="exampleadress1">
-
+  <br>
    <a class="back-link" href="page-2.html">
     &#60; Back
    </a>
@@ -61,7 +61,6 @@
      </a>
  </button> 
  </div>
- <hr>
 </form>
  </div>
   
