--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </title>
 <link rel="icon" href="favicon.ico">
 <meta charset="utf-8">
+
 <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
@@ -36,12 +37,12 @@
           Log in
         </h1>
         <label for="exampleInputEmail1" class="form-label">
-          Email address
+        <b>BT ID</b> 
         </label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-      
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="this is usually your email adress">
+        <br>
         <label for="exampleInputPassword1" class="form-label">
-          Password
+        <b>Password </b> 
         </label>
           <a class="showlink" href="">
           show
@@ -49,8 +50,9 @@
         <input type="password" class="form-control" id="exampleInputPassword1">
         <a href="">
           forgotten your login details?
-        </a><br>
-        <input type="checkbox"><label for="checkbox">
+        </a><br><br>
+        <input type="checkbox">
+        <label for="checkbox" class="remember-melabel">
           Remember me
         </label>
         <div class="d-grid mt-4"> 
@@ -60,7 +62,7 @@
             Create One
             </a>
           </p>
-          <hr>
+         
         </div>
       </form>
       </div>
