--- a/page-2.html
+++ b/page-2.html
@@ -36,20 +36,20 @@
       Details
     </h1>
     <label for="exampleFullname1" class="form-label-fullname">
-      Full name
+     <b>Full name</b> 
     </label>
     <input type="text" class="form-control" id="exampleFullname1">
-  
+    <br>
     <label for="phone">
-      Enter your phone number:
+       <b>Enter your phone number:</b> 
     </label>
     <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" class="form-control">
-  
+    <br>
     <label for="exampleDateofBirth1" class="form-label-dateofbirth">
-      Date of Birth
+     <b>Date of Birth</b> 
     </label>
     <input type="date" class="form-control" id="DateofBirth1">
-  
+      <br>
     <a  class="back-link" href="index.html">
        &#60; Back
     </a>
@@ -61,7 +61,7 @@
     </button> 
   
   </div>
-  <hr>
+
   </form>
   </div>
  
